@@ -128,9 +128,12 @@
 
 		<separator/>
 
+		<placeholder name="Select Items">
 		<menuitem name="Select All"
 			  _label="Select _All" 
 			  verb="Select All"/>
+		</placeholder>
+		
 				
 		<placeholder name="File Items Placeholder" delimit="top"/>
 		<placeholder name="Dangerous File Items Placeholder" delimit="top"/>
