@@ -1,3 +1,15 @@
+2003-09-25  James Willcox  <james@ximian.com>
+
+	* libnautilus-private/nautilus-directory.c:
+	(nautilus_directory_match_glob):
+	* libnautilus-private/nautilus-directory.h:
+	* src/file-manager/fm-directory-view.c: (get_pattern_selection),
+	(bonobo_menu_select_pattern_callback), (real_merge_menus):
+	* src/file-manager/nautilus-directory-view-ui.xml:
+	* src/nautilus-shell-ui.xml:
+ 
+ 	Add a "Edit->Select Pattern" menu entry
+ 
 2003-09-25  Ettore Perazzoli  <ettore@ximian.com>
 
 	* src/file-manager/fm-directory-view.c
